fixed heading content spacing

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -53,7 +53,11 @@ header {
   }
   .header-content {
     width: auto;
-    margin: 20% 0 auto 40%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    align-content: center;
+    margin-top: 10%;
     h1 {
       font-size: 3rem;
       line-height: 4rem;
